@@ -60,6 +60,9 @@ if ($in{'confirm'}) {
 					}
 				}
 
+			# Disable extra admins
+			&update_extra_webmin($d, 1);
+
 			# Save new domain details
 			print $text{'save_domain'},"<br>\n";
 			$d->{'disabled'} = join(",", @disabled);
