@@ -57,6 +57,9 @@ if ($in{'confirm'}) {
 					}
 				}
 
+			# Enable extra admins
+			&update_extra_webmin($dd, 0);
+
 			# Save new domain details
 			print $text{'save_domain'},"<br>\n";
 			delete($d->{'disabled'});
