@@ -1174,3 +1174,4 @@ Removed the 'Bring up virtual interfaces?' module configuration option, as use o
 Updated the phpMyAdmin script installer to versions 3.2.2.1 and 2.11.9.6.
 Added a domain owner level capability restriction to prevent editing of external IP addresses.
 When a sub-server is converted to a top-level server, files from /etc/skel are copied into its home directory.
+When a virtual server is disabled, all extra admin logins are disabled too.
